<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="application_name">Stream Player</string>
    <string name="enable_background_audio">Play in background</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="text">Text</string>
    <string name="logging">Logging</string>
    <string name="logging_normal">Normal</string>
    <string name="logging_verbose">Verbose</string>
    <string name="retry">Retry</string>
    <string name="off">[off]</string>
    <string name="on">[on]</string>
    <string name="drm_error_not_supported">Protected content not supported on API levels below 18</string>
    <string name="drm_error_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="drm_error_unknown">An unknown DRM error occurred</string>
    <string name="failed">Playback failed</string>
    <string name="app_name">StrimBagZ</string>
    <string name="app_id">44847EF3</string>
    <string name="navigation_open">Open</string>
    <string name="navigation_close">Close</string>
    <string-array name="navigation">
        <item>@string/online_title</item>
        <item>@string/favorites_title</item>
        <item>@string/game_title</item>
        <item>@string/preference_title</item>
        <item>@string/feedback_title</item>
    </string-array>
    <string name="feedback_title">Feedback</string>
    <string name="event_title">Event</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_clear">Clear</string>
    <string name="action_search">Search</string>
    <string name="action_search_hint">Search stream</string>
    <string name="action_route" />
    <string name="error_service_unavailable">Service Unavailable\n Hopefully Twitch fixes their stuff fast</string>
    <string name="error_unexpected">A unicorn has blocked the request, please contact the developer.</string>
    <string name="error_connection_error_title">Connexion error</string>
    <string name="error_connection_error_message">A connection error occurred. Please verify
        that you are connected to an EDGE, 3G or Wifi network.
    </string>
    <string name="error_data_error_title">Incorrect data</string>
    <string name="error_data_error_message">Received data invalid</string>
    <string name="error_stream_offline">Stream offline :(</string>
    <string name="error_no_player_title">No video player installed</string>
    <string name="error_no_player_message">In order to play videos you need
        to install an external video player, like VLC or MX Player.</string>
    <string name="error_internal_player">Unable to use internal Player</string>
    <string name="error_no_archived_videos">Twitch changed its API, videos are currently broken :(</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_button_retry">Retry</string>
    <string name="dialog_progress_title">Loading</string>
    <string name="dialog_progress_message">Loading in progress…</string>
    <string name="dialog_username_title">Username</string>
    <string name="dialog_playlist_title">Video Playlist</string>
    <string name="dialog_stream_quality_title"> Default Quality</string>
    <string name="dialog_stream_quality_mobile_title">Default Quality (Mobile Data)</string>
    <string name="dialog_stream_quality_default_value">Medium</string>
    <string name="dialog_stream_quality_mobile_default_value">Mobile</string>
    <string name="online_title">Currently Live</string>
    <string name="favorites_title">Following</string>
    <string name="following_title">Following</string>
    <string name="followed_games_title">Followed Games</string>
    <string name="followed_games_empty">No live streams for any games you follow</string>
    <string name="following_user_now">You\'re now following %1$s</string>
    <string name="unfollowing_user_now">You\'re not following %1$s anymore</string>
    <string name="error_following">Couldn\'t follow %1$s, please try again later</string>
    <string name="error_unfollowing">Couldn\'t unfollow %1$s, please try again later</string>
    <string name="cnt_menu_stream">"Open Stream"</string>
    <string name="cnt_menu_stream_mobile">"Open Stream (Mobile)"</string>
    <string name="cnt_menu_stream_low">"Open Stream (Low)"</string>
    <string name="cnt_menu_stream_meidum">"Open Stream (Medium)"</string>
    <string name="cnt_menu_stream_high">"Open Stream (High)"</string>
    <string name="cnt_menu_stream_source">"Open Stream (Source)"</string>
    <string name="cnt_menu_streamonly">"Open Stream only"</string>
    <string name="cnt_menu_chatonly">"Open Chat only"</string>
    <string name="cnt_event_subscribe">Subscribe</string>
    <string name="cnt_event_unsubscribe">Unsubscribe</string>
    <string name="channel_name">Channel-Name</string>
    <string name="channel_name_empty_header">Not logged in</string>
    <string name="channel_name_empty">Not logged in</string>
    <string name="oauth_empty">Error: No OAuth key found.\n\n<b>[Settings → Authenticate]</b></string>
    <string name="channel_stream">Stream</string>
    <string name="channel_thumbnail">Thumbnail</string>
    <string name="channel_watch_stream">Watch Stream</string>
    <string name="channel_chat">Open Chat</string>
    <string name="channel_archives">Archives</string>
    <string name="channel_status">Status</string>
    <string name="channel_logo">Logo</string>
    <string name="channel_online">Online</string>
    <string name="channel_offline">Offline</string>
    <string name="channel_unknown">Unknown</string>
    <string name="channel_archives_empty">No archived videos</string>
    <string name="channel_detail_empty">Select a channel for details</string>
    <string name="stream_viewers">Viewers</string>
    <string name="stream_went_offline">The stream went offline.\nAuto Reconnect in case of picnic.</string>
    <string name="stream_connection_lost">Unable to connect to stream servers.</string>
    <string name="stream_viewer_list_title">Viewer List</string>
    <string name="stream_channel_description_title">Channel Description</string>
    <string name="notification_stream_backgrounded_title">%1$s\'s stream is running</string>
    <string name="notification_stream_backgrounded">You\'re still connected to %1$s\'s chat</string>
    <string name="notification_chat_backgrounded_title">%1$s\'s chat is running</string>
    <string name="notification_chat_backgrounded">You\'re still connected to %1$s\'s chat</string>
    <string name="search_no_result">No streams found</string>
    <string name="playlist_part"><u>PART</u></string>
    <string name="playlist_slash">/</string>
    <string name="preference_title">Settings</string>
    <string name="preference_internal_player">Use the internal Player</string>
    <string name="preference_notifications_unavailable">No Google Play services detected</string>
    <string name="preference_notifications">Notifications</string>
    <string name="preference_notifications_enable">Enable Notifications</string>
    <string name="preference_notifications_marathon">Marathon</string>
    <string name="preference_notifications_watchspeedruns">WatchSpeedruns</string>
    <string name="preference_notifications_marathon_context">Getting informed about future marathons</string>
    <string name="preference_notifications_watchspeedruns_context">Getting push notifications from @WatchSpeedruns</string>
    <string name="preference_licenses">Open Source Licenses</string>
    <string name="preference_login">Login</string>
    <string name="preference_authenticate">Refresh Token</string>
    <string name="preference_logout">Logout</string>
    <string name="preference_debug_enable">Enable Debugging</string>
    <string name="preference_debug_address">IP address</string>
    <string name="preference_debug_address_context">Set IP address which hosts the FFZ dev build</string>
    <string name="game_title">Game Overview</string>
    <string name="live_games_title">Followed Games</string>
    <string name="game_box">Box</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ffz_friday_headline">Feature Friday!</string>
    <string name="btnFollow">Follow</string>
    <string name="btnUnfollow">Unfollow</string>
    <string name="description">Media Controls</string>
    <string name="event_runner">Runner: %1$s</string>
    <string name="event_category">Category: %1$s</string>
    <string name="event_estimate">Estimate: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_donation">Donation</string>
    <string name="donation_text">StrimBagZ</string>
    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
    <string name="storage_permission_denied">Permission to access storage was denied</string>
    <string name="title_activity_help">Help</string>
    <string name="action_about">About</string>
    <string name="title_activity_leanback">Leanback LeanbackActivity Title</string>
    <string name="browse_title"><![CDATA[Videos by Your Company]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="vertical_grid_title"><![CDATA[Vertical Video Grid]]></string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="init_text">00:00</string>
    <string name="play_pause_description">Play Pause Button</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_video_found">No video was found</string>
    <string name="about_app">About DemoCast Player</string>
    <string name="version">Version: %1$s</string>
    <string name="popular_header">Popular Videos</string>
    <string name="preferences">PREFERENCES</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="should_start">shouldStart</string>
    <string name="start_position">startPosition</string>
    <string name="search_results">Search Results</string>
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="oops">Oops</string>
</resources>