<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/following"
            android:checked="true"
            android:icon="@drawable/ic_heart"
            android:title="@string/following_title" />

        <item
            android:id="@+id/srl"
            android:checked="false"
            android:icon="@drawable/ic_srl_menu"
            android:title="@string/srl_title"/>

        <item
            android:id="@+id/marathon"
            android:checked="false"
            android:icon="@drawable/ic_schedule"
            android:title="@string/preference_notifications_marathon"
            android:visible="false"/>

        <item
            android:id="@+id/preferences"
            android:checked="false"
            android:icon="@drawable/ic_settings"
            android:title="@string/preference_title" />

        <item
            android:id="@+id/menu_none"
            android:title=""
            android:visible="false"/>
    </group>

</menu>